# Mini-Pagila-API

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.cursor/memory-bank/: activeContext.md
.cursor/rules/: techstack-rules.mdc
app/: main.py
app/agents/: base_agent.py  llm_agent.py  search_agent.py
app/api/v1/: ai.py  films.py  rentals.py
core/: ai_kernel.py  auth.py  config.py  database.py  logging.py
core/migrations/: README.md  env.py
core/migrations/versions/: 84a7b665dde9_migration_3_add_streamingsubscription_.py  c1f026e9ccc2_migration_2_add_streaming_available_to_.py  ed90e0dffeb6_migration_1_create_base_tables.py
docker/: Dockerfile  docker-compose.yml
docs/: database_setup_guide.md  implementation_plan.md  implementation_plan_old.md  implementation_progress.md  implementation_progress_old.md  project_plan.md  quick_start_guide.md
domain/: base.py  models.py  schemas.py
repositories/: film_repository.py  rental_repository.py
scripts/: pagila-data.sql  pagila-schema.sql
services/: ai_service.py  film_service.py  rental_service.py
tests/: conftest.py  test_agents.py  test_ai.py  test_auth.py  test_films.py  test_handoff_integration.py  test_health.py  test_logging.py  test_models.py  test_protected_endpoint.py  test_rentals.py
